[metadata]
name = everest-core
version = attr: everest.core.__version__
author = aw
author_email = aw@pionix.de
description = Library that understands and models the framework schemas
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/EVerest
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
install_requires =
    everest-framework

package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    test*

[options.extras_require]
test =
    coverage

[options.entry_points]
console_scripts =
    ev-codegen = everest.core.codegen:main
